Minor formatting updates

--- a/app/views/activities/edit.html.erb
+++ b/app/views/activities/edit.html.erb
@@ -8,5 +8,9 @@
             <%= link_to 'View Activity', @activity %> 
         </button >
 
+        <button type="button" class="btn btn-outline-primary">
+            <%= link_to 'View All Activities', activities_path %>
+        </button>
+
     </section>
 </div>
