--- a/app/views/activities/show.html.erb
+++ b/app/views/activities/show.html.erb
@@ -41,7 +41,7 @@
     <% end %>
 
     <button type="button" class="btn btn-outline-primary">
-        <%= link_to 'Back', activities_path %>
+        <%= link_to 'View All Activities', activities_path %>
     </button>
 
     <br>
