--- a/app/views/chats/edit.html.erb
+++ b/app/views/chats/edit.html.erb
@@ -8,5 +8,9 @@
             <%= link_to 'Show', @chat %> 
         </button >
 
+        <button type="button" class="btn btn-outline-primary">
+            <%= link_to 'View All Comments', chats_path %>
+        </button>
+
     </section>
 </div>
