--- a/app/views/contacts/edit.html.erb
+++ b/app/views/contacts/edit.html.erb
@@ -8,5 +8,9 @@
             <%= link_to 'Show', @contact %> 
         </button >
 
+        <button type="button" class="btn btn-outline-primary">
+            <%= link_to 'View All Contacts', contacts_path %>
+        </button>
+
     </section>
 </div>
