--- a/app/views/contacts/show.html.erb
+++ b/app/views/contacts/show.html.erb
@@ -52,7 +52,7 @@
     <% end %>
 
     <button type="button" class="btn btn-outline-primary">
-        <%= link_to 'Back', contacts_path %>
+        <%= link_to 'View All Contacts', contacts_path %>
     </button>
 
     <br>
