--- a/app/views/links/edit.html.erb
+++ b/app/views/links/edit.html.erb
@@ -8,5 +8,9 @@
             <%= link_to 'View Link', @link %> 
         </button >
 
+        <button type="button" class="btn btn-outline-primary">
+            <%= link_to 'View All Links', links_path %>
+        </button>
+
     </section>
 </div>
