--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -20,9 +20,14 @@ h1 {
      margin-top: 1em;
  }
 
- .card {
+.card {
     margin: 1em;
 }
+
+.card-img-top {
+    max-height: 12rem;
+}
+
 .btn-outline-primary a:hover{
     color: white;
     font-style: italic;
@@ -31,6 +36,10 @@ h1 {
 .nav-link:hover {
     text-decoration: underline;
     font-weight: bold;
+}
+
+.card-activity, .card-links {
+    width: 100%;
 }
 
 .card_buttons button {
@@ -70,7 +79,7 @@ h1 {
         align-items: center;
         align-content: center;
         max-width: max-content;
-        justify-content: center;
+        justify-content: left;
 }
 
 .chat_buttons {
@@ -83,6 +92,10 @@ h1 {
 @media only screen and (min-width: 1200px) {
     .chat_buttons {
         margin-left: 3em;
+    }
+
+    .card-activity, .card-links {
+        width: 47%;
     }
 
 }
