--- a/app/views/chats/show.html.erb
+++ b/app/views/chats/show.html.erb
@@ -32,7 +32,7 @@
     <% end %>
 
     <button type="button" class="btn btn-outline-primary">
-        <%= link_to 'Back', chats_path %>
+        <%= link_to 'View All Comments', chats_path %>
     </button>
 
     <br>
