--- a/app/views/documents/edit.html.erb
+++ b/app/views/documents/edit.html.erb
@@ -8,5 +8,9 @@
             <%= link_to 'View Details', @document %> 
         </button >
 
+        <button type="button" class="btn btn-outline-primary">
+            <%= link_to 'View All Documents', documents_path %>
+        </button>
+
     </section>
 </div>
