--- a/app/views/documents/show.html.erb
+++ b/app/views/documents/show.html.erb
@@ -35,7 +35,7 @@
     <% end %>
 
     <button type="button" class="btn btn-outline-primary">
-        <%= link_to 'Back', documents_path %>
+        <%= link_to 'View All Documents', documents_path %>
     </button>
 
     <br>
