--- a/app/views/links/show.html.erb
+++ b/app/views/links/show.html.erb
@@ -34,7 +34,7 @@
     <% end %>
 
     <button type="button" class="btn btn-outline-primary">
-        <%= link_to 'Back', links_path %>
+        <%= link_to 'View All Links', links_path %>
     </button>
 
     <br>
