--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -8,5 +8,9 @@
             <%= link_to 'View Photo Post', @post %> 
         </button >
 
+        <button type="button" class="btn btn-outline-primary">
+           <%= link_to 'View All Photos', posts_path %>
+        </button>
+
     </section>
 </div>
