--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -26,7 +26,7 @@
     <% end %>
 
     <button type="button" class="btn btn-outline-primary">
-        <%= link_to 'Back', posts_path %>
+        <%= link_to 'View All Photos', posts_path %>
     </button>
 
     <br>
